<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/frame_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.jjoe64.graphview.GraphView
            android:id="@+id/gv_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/frame_controls"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/start" />

        <Button
            android:id="@+id/btn_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_weight="0"
            android:text="@string/disconnect" />

        <EditText
            android:id="@+id/et_console"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_disconnect"
            android:layout_marginTop="8dp"
            android:editable="false"
            android:gravity="bottom"
            android:lines="3"
            android:scrollbars="vertical" />

        <Switch
            android:id="@+id/switch_buzzer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_console"
            android:text="@string/buzzer"
            android:textColor="@color/color_red"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/switch_led"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch_buzzer"
            android:layout_marginTop="8dp"
            android:text="@string/led"
            android:textColor="@color/color_green"
            android:textSize="18sp" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/gv_graph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/switch_led"
            android:layout_marginTop="8dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/frame_storage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ListView
            android:id="@+id/lv_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp" />
    </LinearLayout>

    <Switch
        android:id="@+id/switch_enable_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_on_off"
        android:textSize="18sp" />

    <FrameLayout
        android:id="@+id/frame_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bluetooth_off"
            android:textSize="24sp"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/frame_controllers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_enable_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/start_search" />

        <ProgressBar
            android:id="@+id/pb_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:indeterminate="true"
            android:visibility="gone" />

        <ListView
            android:id="@+id/lv_device"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp" />
    </LinearLayout>
</LinearLayout>